[531] fix overflow scroll

--- a/src/modules/land-works/components/list-new-property/index.scss
+++ b/src/modules/land-works/components/list-new-property/index.scss
@@ -1,7 +1,7 @@
 @import 'styles/text.scss';
 
 .properties {
-  overflow: scroll;
+  overflow: auto;
   max-height: 45vh;
 
   ::-webkit-scrollbar {
